--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -69,7 +69,7 @@ body {
                     text-decoration: none;
                     }
 
-                    my_prod_title {
+                    .my_prod_title {
                         font-size: 30px;
                         text-transform: uppercase;
                         letter-spacing: .2em;
@@ -79,3 +79,29 @@ body {
                         .my_prod_text {
                         padding-right: 20px;
                         }
+
+/****Cart Page****/
+.my_custom_table {
+    min-width: 400px;
+    font-size: 14px;
+    }
+    .my_custom_thead {
+    font-weight: normal;
+    text-transform: uppercase;
+    letter-spacing: .2em;
+    background-color: #f8f9fa!important;
+    }
+    .custom_image {
+    width: 100px;
+    height: 100px;
+    }
+    .custom_a {
+    text-decoration: none;
+    }
+    .custom_icon {
+    text-decoration: none;
+    color: #868e96 !important;
+    }
+    .my_custom_button {
+    margin-top: 5px;
+    }
