added orders list, fixed product page, fixed account creation, added aability to view order lists and order history

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -49,20 +49,17 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"><span class ="bi-person me-2"></span>My Account</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href=""><span class="bi-person-circle"></span> My profile</a></li>
-                            <li><a class="dropdown-item" href=""><span class="bi-pencil-fill"></span> Edit profile</a></li>
-                            <li><a class="dropdown-item" href=""><span class="bi-arrow-left-right"></span> Password
-                                    Change</a></li>
-                            <li><a class="dropdown-item" href=""><span class="bi-box-arrow-in-right"></span> Log out</a>
+                            <li><a class="dropdown-item" href="{% url 'order:order_history' %}"><span class="bi-pencil-fill"></span> Order History</a></li>
+                            <li><a class="dropdown-item" href="{% url 'signout' %}"><span class="bi-box-arrow-in-right"></span> Log out</a>
                             </li>
             </ul>
         </div>
 
         <div class="nav navbar-nav">
             <li class="nav-item">
-                <a class="btn btn-outline-light " href=""><span class="bi-box-arrow-in-left"></span> Login</a>
+                <a class="btn btn-outline-light " href="{% url 'signin' %}"><span class="bi-box-arrow-in-left"></span> Login</a>
                 <li class="nav-item">
-                    <a class="btn btn-outline-light" href=""><span class="bi-door-open"></span> Sign up</a>
+                    <a class="btn btn-outline-light" href="{% url 'signup' %}"><span class="bi-door-open"></span> Sign up</a>
             </li>
         </ul>
      
