--- a/templates/home.html
+++ b/templates/home.html
@@ -14,10 +14,10 @@
             <img src="static/images/switch.jpg" style="width:700px" alt="switch" class="d-block w-100">
         </div>
         <div class="carousel-item">
-            <img src="static/images/ps5.jpg" alt="Chicago" class="d-block w-100">
+            <img src="static/images/ps5.jpg" alt="ps5" class="d-block w-100">
         </div>
         <div class="carousel-item">
-            <img src="static/images/xbox.jpg" alt="New York" class="d-block w-100">
+            <img src="static/images/xbox.jpg" alt="xbox" class="d-block w-100">
         </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
@@ -30,4 +30,22 @@
 
 
     </div>
+
+    <div class="row">
+
+        <div class="col-lg-4 col-md-4 col-xs-4 p-5">
+            <a class="thumbnail" href="#">
+                <img class="img-responsive" src="media/category/buttonswitch.png" alt="" style = "width:50%">
+            </a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-xs-4 p-5">
+            <a class="thumbnail" href="#">
+                <img class="img-responsive" src="media/category/ps5button.png" alt=""  style = "width:50%">
+            </a>
+        </div>
+        <div class="col-lg-4 col-md-4 col-xs-4 p-5">
+            <a class="thumbnail" href="#">
+                <img class="img-responsive" src="media/category/xboxbutton.png" alt="" style = "width:50%">
+            </a>
+        </div>
     {% endblock content %}
