--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -3,11 +3,35 @@
 {% block title %}Sign Up{% endblock title %}
 {% block content %}
 <div class="container p-5 my-5 border">
-<h2>Sign Up</h2>
-<form method="post">
- {% csrf_token %}
- {{ form|crispy }}
- <button class="btn btn-primary ml-2" type="submit">Sign Up</button>
-</form>
+    <h2>Sign Up</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <button class="btn btn-primary ml-2" type="submit">Sign Up</button>
+    </form>
 </div>
-{% endblock content %}
+<br>
+</div>
+</div>
+{% else %}
+<div class="mx-auto">
+    <br>
+    <h1 class="my_title text-center">Your account has been successfully
+        created</h1>
+    <br>
+    <div>
+        <p>
+            Dear Customer,
+            <br>
+            <br>
+            Your account has been created and it is ready to use.
+            <br>
+            <a href="{% url 'shop:allProdCat' %}">Continue shopping</a> and enjoy the
+            variety of cushions that we have at the perfect cushion store.
+        </p>
+    </div>
+</div>
+{% endif %}
+</div>
+<br>
+{% endblock %}
