--- a/search_app/templates/search.html
+++ b/search_app/templates/search.html
@@ -4,7 +4,7 @@
 Look for the one that suits your needs.
 {% endblock %}
 {% block title %}
-Search - Perfect Cushion Store
+Search - Games store
 {% endblock %}
 {% block content %}
 <div>
