--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -108,7 +108,7 @@ body {
 .stripe-button-el, .my_custom_button {
     width: 100% !important;
     display: block !important;
-    background-color: #868e96 !important;
+    background-color: #3a3d41 !important;
     border: 0px !important;
     background-image: none !important;
     }
