--- a/templates/order/thanks.html
+++ b/templates/order/thanks.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block title %}
-Thanks - Perfect Cushion Store
+Thanks - Games store
 {% endblock %}
 {% block content %}
 <div>
