--- a/templates/order/orders_list.html
+++ b/templates/order/orders_list.html
@@ -34,7 +34,7 @@ Order History - Games store
         </table>
         {% else %}
         <p>You have not placed any orders yet.<br><br><a href="{% url 'shop:allProdCat'
-%}" class="btn btn-secondary">Continue
+%}" class="btn btn-dark">Continue
                 shopping</a></p>
         {% endif %}
     </div>
