--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,12 +20,11 @@
                 </li>
                 {% endif %}
             </ul>
-            <form class="d-flex align-items-center w-50 form-search">
-                <div class="input-group">
-                    </ul>
-                    <input type="search" class="form-control" placeholder="Search" aria-label="Search" />
-                </div>
-                <a href="#!" class="text-white"><span class="bi-search ps-3"></span></a>
+           
+                
+            <form class="d-flex" action="{% url 'search_app:searchResult' %}" mrthod="get">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q">
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
             </form>
 
             <ul class="navbar-nav ms-3">
