--- a/templates/shop/category.html
+++ b/templates/shop/category.html
@@ -53,11 +53,14 @@
 				<hr>
 				<div class="text-center">
 					{% for pg in products.paginator.page_range %}
-						<a href="?page={{pg}}" class="btn btn-light btn-sm {% if products.number == pg %}active{% endif %}">{{pg}}</a>
+						<a href="?page={{pg}}" class="btn btn-light btn-sm 
+							{% if products.number == pg %}active{% endif %}">{{pg}}
+						</a>
 					{% endfor %}
 				</div>
 			{% endif %}
 		</div>
+		
 		<br>
 	</div>
 {% endblock %}
